<resources>
    <string name="test_user_name">Bob</string>
    <string name="test_password">123456</string>
    <string name="app_name">Volunteering App</string>
    <string name="a_z">A-Z</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="auto_fill_hints">Input</string>
    <string name="availability_time">Availability time</string>
    <string name="avatar">Avatar</string>
    <string name="change">Change</string>
    <string name="change_password">Change password</string>
    <string name="check_in">Check in</string>
    <string name="check_in_code">Please enter check in code</string>
    <string name="comment">Comment</string>
    <string name="comment_here">Comment here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <string name="current_password">Current password</string>
    <string name="detail">Detail</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="hello">Hello!</string>
    <string name="index_page">Index page!</string>
    <string name="location">Location</string>
    <string name="log_in">Log in</string>
    <string name="my_profile">My profile</string>
    <string name="needed_volunteers_number">Needed volunteers number</string>
    <string name="new_email">New email</string>
    <string name="new_password">New password</string>
    <string name="other_requirements">Other requirements</string>
    <string name="password">Password</string>
    <string name="please_enter_verify_code">Please enter verify code</string>
    <string name="please_select_date">Please select time</string>
    <string name="publish">Publish</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="select_activity_prefer">Please select your activity prefer</string>
    <string name="select_age_group">Please select your age group</string>
    <string name="select_availability_time">Please select your availability time</string>
    <string name="select_category">Please select category</string>
    <string name="select_key_skills">Please select your key skills</string>
    <string name="sent_email">We have sent you a verify code to you, please check your email.</string>
    <string name="setting">Setting</string>
    <string name="sign_up">Sign up</string>
    <string name="sort_by">Sort by:</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="time_required_hours">Time required (hours)</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="view_detail">View detail</string>
    <string name="volunteer_history">Volunteering history</string>
    <string name="volunteering_time">Volunteering time</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="volunteer_management">Volunteer management</string>
    <string name="delete">Delete</string>
    <string name="volunteer_detail">Volunteer detail</string>
    <string name="delete_user">Delete user</string>
</resources>
